--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ['setuptools', 'wheel', 'Cython>=0.29.14', 'numpy']
+requires = ['setuptools', 'wheel', 'Cython>=0.29.14', 'numpy>=1.24.3', 'matplotlib', 'rasterio']
 build-backend = 'setuptools.build_meta'
 
 [project]
@@ -10,7 +10,7 @@ authors = [
 ]
 description = 'Compute the minimal altitude to safely return to an airport in gliding flight'
 readme = 'README.md'
-requires-python = '>= 3.6'
+requires-python = '>= 3.9'
 classifiers = [
     'Development Status :: 4 - Beta',
     'Intended Audience :: Science/Research',
